--- a/index.html
+++ b/index.html
@@ -1,43 +1,165 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entdecke 360° - Bockhorst</title>
-    <link rel="icon" href="Bilder/Symbols/FavIcon.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Entdecke360</title>
+		<link rel="icon" href="Bilder/Symbols/FavIcon.png" type="image/png">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="landing is-preload">
 
-    <div class="main-container">
-        <h1><span class="highlighted-text">Bockhorst</span></h1>
-        
-        <div class="image-container"></div>
-    </div>
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-    <div class="menu-container">
-        <button class="menu-icon">&#9776;</button> 
-        <div class="dropdown-menu">
-            <span>Andere Orte</span>
-            <div class="separator"></div> 
-            <a href="Orte/Versmold/index.html">Versmold</a>
-            <div class="separator"></div>
-            <span>Bockhorst</span>
-            <div class="separator"></div>
-            <a href="Orte/Ueberblick/index.html">Überblick</a>
-            <a href="Orte/VonWesten/index.html">Von Westen</a>
-            <a href="Orte/Zentrum/index.html">Zentrum</a>
-            <a href="Orte/Sportplatz/index.html">Sportplatz</a>
-        </div>
-    </div>
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">Entdecke 360</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menü</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Start</a></li>
+											<li><a href="contact.html">Kontakt</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
 
-    <a href="https://www.instagram.com/stadtversmold/" class="corner-image-link">
-        <img src="Bilder/Symbols/instagram.svg" alt="Instagram Link">
-    </a> 
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>Entdecke 360</h2>
+							<p>Präsentieren Sie sich<br />
+							aus einem neuen Blickwinkel</p>
+							<ul class="actions special">
+								<li><a href="/Orte/Ueberblick/index.html" class="button primary">Ansehen</a></li>
+							</ul>
+						</div>
+						<a href="#one" class="more scrolly">Mehr erfahren</a>
+					</section>
 
-    <script src="js/three.min.js"></script>
-    <script src="js/panolens.min.js"></script>
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Vermitteln Sie über eine immersive 360° Tour<br>einen realistischen Eindruck</h2>
+								<p>So erleben Interessenten Ihre Stadt oder Ihr Unternehmen hautnah – bequem von zu Hause aus.</p>
+							</header>
+							<ul class="icons major">
+								<li><span class="icon fa-image major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon fa-user major style1"><span class="label">Dolor</span></span></li>
+							</ul>
+						</div>
+					</section>
 
-    <script src="main.js"></script> 
-</body>
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+								<h2>Städte</h2>
+								<p>Mit einer 360°-Tour können Städte ihre Sehenswürdigkeiten und Attraktionen interaktiv präsentieren, wodurch Besucher schon vor der Reise einen detaillierten Eindruck gewinnen. Dies steigert das Interesse und fördert den Tourismus, indem potenzielle Gäste die Stadt virtuell erkunden können.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+								<h2>Öffentliche Einrichtungen</h2>
+								<p>Öffentliche Einrichtungen wie Universitäten, Museen oder Ämter profitieren von 360°-Touren, da sie Transparenz und Zugänglichkeit bieten. Interessierte können sich vorab über Gebäude, Angebote und Dienstleistungen informieren, was sowohl die Besucherzahlen als auch das Vertrauen in die Institution steigert.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+								<h2>Unternehmen</h2>
+								<p>Unternehmen können mit 360°-Touren ihre Räumlichkeiten, Produkte und Dienstleistungen anschaulich und eindrucksvoll präsentieren. Dies hilft, Kunden und Partner zu gewinnen, die sich schon vor einer persönlichen Begegnung ein umfassendes Bild von der Firma machen können.</p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Alle Vorteile</h2>
+								<p>360°-Touren heben Ihre Außendarstellung auf ein neues Niveau. Erfahren Sie, wie sie Vertrauen schaffen, Reichweite erhöhen und Ihre Besucher interaktiv begeistern.</p>
+							</header>
+							<ul class="features">
+								<li class="icon fa-handshake">
+									<h3>Vertrauen</h3>
+									<p>360°-Touren vermitteln einen realistischen und authentischen Eindruck, der das Vertrauen potenzieller Kunden stärkt. Besucher gewinnen ein Gefühl der Vertrautheit, bevor sie überhaupt persönlich erscheinen.</p>
+								</li>
+								<li class="icon solid fa-bullhorn">
+									<h3>Reichweite</h3>
+									<p>Virtuelle Touren lassen sich leicht online teilen und steigern die Sichtbarkeit Ihrer Stadt oder Firma. Dieser moderne Ansatz zieht mehr Aufmerksamkeit auf Ihre Website und soziale Netzwerke.</p>
+								</li>
+								<li class="icon solid fa-mouse-pointer">
+									<h3>Interaktivität</h3>
+									<p>Besucher können sich aktiv durch die Tour bewegen und individuell erkunden, was für sie am interessantesten ist. Diese interaktive Erfahrung fördert die Bindung an Ihr Angebot und bleibt nachhaltig im Gedächtnis.</p>
+								</li>
+								<li class="icon solid fa-eye">
+									<h3>Transparenz</h3>
+									<p>Zeigen Sie Ihre Räumlichkeiten so, wie sie sind, und schaffen Sie ein offenes Bild Ihrer Stadt oder Firma. Die visuelle Darstellung beseitigt Unsicherheiten und erhöht die Glaubwürdigkeit.</p>
+								</li>
+								<li class="icon fa-heart">
+									<h3>Engagement</h3>
+									<p>Virtuelle Touren halten Besucher länger auf Ihrer Website, was zu höherem Interesse und mehr Interaktionen führt. Diese vertiefte Auseinandersetzung kann auch die Chancen für eine Kontaktaufnahme oder einen Besuch erhöhen.</p>
+								</li>
+								<li class="icon fa-clock">
+									<h3>Bequemlichkeit</h3>
+									<p>Interessierte können Ihre Räume jederzeit und von jedem Ort aus erkunden, was den Zugang erleichtert. Diese Flexibilität spart Zeit und erhöht die Attraktivität Ihres Angebots.</p>
+								</li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- CTA -->
+					<section id="cta" class="wrapper style4">
+						<div class="inner">
+							<header>
+								<h2>Sie sind interessiert?</h2>
+								<p>Nutzen Sie die Schaltflächen rechts, um ein Beispiel unserer Arbeit zu entdecken und sich direkt in Verbindung zu setzen.</p>
+							</header>
+							<ul class="actions stacked">
+								<li><a href="/Orte/Ueberblick/index.html" class="button fit primary">Ansehen</a></li>
+								<li><a href="contact.html" class="button fit">Kontakt</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="mailto:ludewig.biz@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.instagram.com/morilud.mp4/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Entdecke360</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="impressum.html">Impressum</a></li><li><a href="privacy.html">Datenschutz</a></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
