--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Vermitteln Sie über eine immersive 360° Tour<br>einen realistischen Eindruck</h2>
+								<h2>Vermitteln Sie über eine immersive 360° Tour<br> einen realistischen Eindruck</h2>
 								<p>So erleben Interessenten Ihre Stadt oder Ihr Unternehmen hautnah – bequem von zu Hause aus.</p>
 							</header>
 							<ul class="icons major">
@@ -127,7 +127,7 @@
 						<div class="inner">
 							<header>
 								<h2>Sie sind interessiert?</h2>
-								<p>Nutzen Sie die Schaltflächen rechts, um ein Beispiel unserer Arbeit zu entdecken und sich direkt in Verbindung zu setzen.</p>
+								<p>Nutzen Sie die Schaltflächen, um ein Beispiel unserer Arbeit zu entdecken und sich direkt in Verbindung zu setzen.</p>
 							</header>
 							<ul class="actions stacked">
 								<li><a href="/Orte/Ueberblick/index.html" class="button fit primary">Ansehen</a></li>
