--- a/Orte/VonWesten/index.html
+++ b/Orte/VonWesten/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entdecke 360° - Bockhorst von Westen</title>
+    <title>Entdecke360 - Bockhorst von Westen</title>
     <link rel="icon" href="../../Bilder/Symbols/FavIcon.png" type="image/png">
     <link rel="stylesheet" href="../../style.css">
 </head>
@@ -18,6 +18,12 @@
     <div class="menu-container">
         <button class="menu-icon">&#9776;</button> 
         <div class="dropdown-menu">
+            <span>Entdecke360</span>
+            <div class="separator"></div>
+            <a href="../../index.html">Start</a>
+            <a href="../../contact.html">Kontakt</a>
+            <div class="separator"></div>
+            <div class="separator"></div>
             <span>Andere Orte</span>
             <div class="separator"></div> 
             <a href="../../Orte/Versmold/index.html">Versmold</a>
