--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Entdecke 360</a></h1>
+						<h1><a href="index.html">Entdecke360</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -29,6 +29,7 @@
 										<ul>
 											<li><a href="index.html">Start</a></li>
 											<li><a href="contact.html">Kontakt</a></li>
+											<li><a href="/Orte/Ueberblick/index.html">Beispiel</a></li>
 										</ul>
 									</div>
 								</li>
@@ -50,7 +51,7 @@
 								<hr />
 
 								<h3>Daten</h3>
-								<p>Entdecke 360<br>
+								<p>Entdecke360<br>
 								Moritz Ludewig</p>
 
 								<p>Telefon: +49 151 75085489<br>
