--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Entdecke 360</a></h1>
+						<h1><a href="index.html">Entdecke360</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -29,6 +29,7 @@
 										<ul>
 											<li><a href="index.html">Start</a></li>
 											<li><a href="contact.html">Kontakt</a></li>
+											<li><a href="/Orte/Ueberblick/index.html">Beispiel</a></li>
 										</ul>
 									</div>
 								</li>
@@ -39,7 +40,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Entdecke 360</h2>
+							<h2>Entdecke360</h2>
 							<p>Präsentieren Sie sich<br />
 							aus einem neuen Blickwinkel</p>
 							<ul class="actions special">
@@ -57,9 +58,9 @@
 								<p>So erleben Interessenten Ihre Stadt oder Ihr Unternehmen hautnah – bequem von zu Hause aus.</p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-image major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-user major style1"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-image major style1"><span class="label">Image</span></span></li>
+								<li><span class="icon fa-heart major style2"><span class="label">Heart</span></span></li>
+								<li><span class="icon fa-user major style1"><span class="label">User</span></span></li>
 							</ul>
 						</div>
 					</section>
