--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Entdecke 360</a></h1>
+						<h1><a href="index.html">Entdecke360</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -29,6 +29,7 @@
 										<ul>
 											<li><a href="index.html">Start</a></li>
 											<li><a href="contact.html">Kontakt</a></li>
+											<li><a href="/Orte/Ueberblick/index.html">Beispiel</a></li>
 										</ul>
 									</div>
 								</li>
