--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 						</section>
 					</section>
 
+					<section id="cta" class="wrapper style4"></section>
+
 				<!-- Three -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
