Neue Instagram Verlinkungen

--- a/Orte/Sportplatz/index.html
+++ b/Orte/Sportplatz/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entdecke360 - Bockhorst Sportplatz</title>
+    <title>entdecke360 - Bockhorst Sportplatz</title>
     <link rel="icon" href="../../Bilder/Symbols/FavIcon.png" type="image/png">
     <link rel="stylesheet" href="../../style.css">
 </head>
@@ -18,7 +18,7 @@
     <div class="menu-container">
         <button class="menu-icon">&#9776;</button> 
         <div class="dropdown-menu">
-            <span>Entdecke360</span>
+            <span>entdecke360</span>
             <div class="separator"></div>
             <a href="../../index.html">Start</a>
             <a href="../../contact.html">Kontakt</a>
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <a href="https://www.instagram.com/stadtversmold/" class="corner-image-link">
+    <a href="https://www.instagram.com/entdecke360/" class="corner-image-link">
         <img src="../../Bilder/Symbols/instagram.svg" alt="Instagram Link">
     </a> 
 
