--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Entdecke360</title>
+		<title>entdecke360</title>
 		<link rel="icon" href="Bilder/Symbols/FavIcon.png" type="image/png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Entdecke360</a></h1>
+						<h1><a href="index.html">entdecke360</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -40,7 +40,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Entdecke360</h2>
+							<h2>entdecke360</h2>
 							<p>Präsentieren Sie sich<br />
 							aus einem neuen Blickwinkel</p>
 							<ul class="actions special">
@@ -146,10 +146,10 @@
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 							<li><a href="mailto:ludewig.biz@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="https://www.instagram.com/morilud.mp4/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/entdecke360/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Entdecke360</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="impressum.html">Impressum</a></li><li><a href="privacy.html">Datenschutz</a></li>
+							<li>&copy; entdecke360</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="impressum.html">Impressum</a></li><li><a href="privacy.html">Datenschutz</a></li>
 						</ul>
 					</footer>
 
