--- a/privacy.html
+++ b/privacy.html
@@ -121,6 +121,7 @@
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 							<li><a href="mailto:ludewig.biz@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://www.instagram.com/entdecke360/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.linkedin.com/company/entdecke360/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; entdecke360</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li><li><a href="impressum.html">Impressum</a></li><li><a href="privacy.html">Datenschutz</a></li>
