--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 										<ul>
 											<li><a href="index.html">Start</a></li>
 											<li><a href="contact.html">Kontakt</a></li>
-											<li><a href="/Orte/Ueberblick/index.html">Beispiel</a></li>
+											<li><a href="example.html">Beispiel</a></li>
 										</ul>
 									</div>
 								</li>
