--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 -->
 <html>
 	<head>
-		<title>entdecke360</title>
+		<title>Virtuelle Rundgänge erleben | ENTDECKE360</title>
 		<link rel="icon" href="Bilder/Symbols/FavIcon.png" type="image/png">
 		<meta charset="utf-8" />
+		<meta name="keywords" content="360°-Tour, virtuelle Tour, interaktive Rundgänge, Städte-Touren, Unternehmenspräsentation">
+		<meta name="author" content="entdecke360">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Präsentieren Sie sich mit interaktiven 360°-Touren. Städte ✓ Unternehmen ✓ Öffentliche Einrichtungen ✓ Jetzt informieren!">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
